--- a/SSO - minhaUFMG.html
+++ b/SSO - minhaUFMG.html
@@ -42,7 +42,7 @@
 						</label>
 					</p>
 					<p>
-						<input name="j_username" id="j_username" size="14" maxlength="50" class="box_login_field" autocapitalize="off" value="TEEESTANDO!"
+						<input name="j_username" id="j_username" size="14" maxlength="50" class="box_login_field" autocapitalize="off" value="dudududud!"
 						 type="text">
 					</p>
 					<p>
