--- a/Chat/index.html
+++ b/Chat/index.html
@@ -18,6 +18,11 @@
                 <p class="chat-message"> E nois    </p>
             </div>
 
+            <div class="chat bot">
+                <div class="user-photo"><img src="img/bot.png"></div>
+                <p class="chat-message"> E nois    </p>
+            </div>
+
         </div>
 
         <div class="chat-form">
